crates/isobmff/src/snapshots/isobmff__conformance_tests__C041.heic.snap
---
source: crates/isobmff/src/conformance_tests.rs
expression: redeserialized_file
snapshot_kind: text
---
IsobmffFile {
    ftyp: Some(
        FileTypeBox {
            major_brand: Brand([109, 115, 102, 49]),
            minor_version: 0,
            compatible_brands: [
                Brand([109, 115, 102, 49]),
                Brand([104, 101, 118, 99]),
                Brand::Iso8,
            ],
        },
    ),
    etyp: [],
    otyp: [],
    pdin: None,
    moov: Some(
        MovieBox {
            mvhd: MovieHeaderBox {
                full_header: FullBoxHeader {
                    version: 0,
                    flags: U24Be(
                        0,
                    ),
                },
                creation_time: 3605693093,
                modification_time: 3605693093,
                timescale: 1000,
                duration: 2000,
                rate: 1,
                volume: 1,
                reserved1: 0,
                reserved2: 0,
                matrix: [
                    65536,
                    0,
                    0,
                    0,
                    65536,
                    0,
                    0,
                    0,
                    1073741824,
                ],
                pre_defined: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                next_track_id: 2,
            },
            meta: None,
            trak: [
                TrackBox {
                    tkhd: TrackHeaderBox {
                        version: 0,
                        flags: TrackHeaderBoxFlags(
                            TrackEnabled | TrackInMovie,
                        ),
                        creation_time: 3605693093,
                        modification_time: 3605693093,
                        track_id: 1,
                        reserved1: 0,
                        duration: 2000,
                        reserved2: 0,
                        layer: 0,
                        alternate_group: 0,
                        volume: 0,
                        reserved3: 0,
                        matrix: [
                            65536,
                            0,
                            0,
                            0,
                            65536,
                            0,
                            0,
                            0,
                            1073741824,
                        ],
                        width: 1920,
                        height: 1080,
                    },
                    tref: None,
                    trgr: None,
                    edts: Some(
                        EditBox {
                            elst: Some(
                                EditListBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries: [
                                        EditListBoxEntry {
                                            edit_duration: 2000,
                                            media_time: 100,
                                            media_rate: 1,
                                        },
                                    ],
                                },
                            ),
                        },
                    ),
                    ttyp: None,
                    meta: None,
                    mdia: MediaBox {
                        mdhd: MediaHeaderBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            creation_time: 3605693093,
                            modification_time: 3605693093,
                            timescale: 1000,
                            duration: 800,
                            language: Langauge(
                                [
                                    0,
                                    0,
                                    0,
                                ],
                            ),
                            pre_defined: 0,
                        },
                        hdlr: HandlerBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            pre_defined: 0,
                            handler_type: HandlerType([112, 105, 99, 116]),
                            reserved: [
                                0,
                                0,
                                0,
                            ],
                            name: Utf8String(
                                "HEIF/ImageSequence/PictureHandler",
                            ),
                        },
                        elng: None,
                        minf: MediaInformationBox {
                            vmhd: Some(
                                VideoMediaHeaderBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            1,
                                        ),
                                    },
                                    graphicsmode: 0,
                                    opcolor: [
                                        0,
                                        0,
                                        0,
                                    ],
                                },
                            ),
                            smhd: None,
                            hmhd: None,
                            sthd: None,
                            vvhd: None,
                            unknown_boxes: [],
                            dinf: DataInformationBox {
                                dref: DataReferenceBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    url: [
                                        DataEntryUrlBox {
                                            full_header: FullBoxHeader {
                                                version: 0,
                                                flags: U24Be(
                                                    1,
                                                ),
                                            },
                                            location: None,
                                        },
                                    ],
                                    urn: [],
                                    imda: [],
                                    snim: [],
                                    unknown_boxes: [],
                                },
                            },
                            stbl: SampleTableBox {
                                stsd: SampleDescriptionBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    boxes: [
                                        UnknownBox {
                                            header: BoxHeader {
                                                size: Short(
                                                    220,
                                                ),
                                                box_type: FourCc(
                                                    "hvc1",
                                                ),
                                            },
                                            data.len: 212,
                                        },
                                    ],
                                },
                                stts: TimeToSampleBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries: [
                                        TimeToSampleBoxEntry {
                                            sample_count: 9,
                                            sample_delta: 100,
                                        },
                                    ],
                                },
                                ctts: Some(
                                    CompositionOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 1,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 2,
                                        entries.len: 2,
                                    },
                                ),
                                cslg: Some(
                                    CompositionToDecodeBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        composition_to_dt_shift: 0,
                                        least_decode_to_display_delta: 0,
                                        greatest_decode_to_display_delta: 0,
                                        composition_start_time: 0,
                                        composition_end_time: 0,
                                    },
                                ),
                                stsc: SampleToChunkBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries.len: 1,
                                },
                                stsz: Some(
                                    SampleSizeBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        sample_size: 0,
                                        sample_count: 9,
                                        entry_size.len: 9,
                                    },
                                ),
                                stz2: None,
                                stco: Some(
                                    ChunkOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 1,
                                        chunk_offset.len: 1,
                                    },
                                ),
                                co64: None,
                                stss: Some(
                                    SyncSampleBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 1,
                                        sample_number: [
                                            1,
                                        ],
                                    },
                                ),
                                stsh: None,
                                padb: None,
                                stdp: None,
                                sdtp: None,
                                sbgp: [
                                    SampleToGroupBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        grouping_type: [
                                            114,
                                            101,
                                            102,
                                            115,
                                        ],
                                        grouping_type_parameter: None,
                                        entry_count: 2,
                                        entries: [
                                            SampleToGroupBoxEntry {
                                                sample_count: 1,
                                                group_description_index: 2,
                                            },
                                            SampleToGroupBoxEntry {
                                                sample_count: 8,
                                                group_description_index: 1,
                                            },
                                        ],
                                    },
                                ],
                                sgpd: [
                                    SampleGroupDescriptionBox {
                                        full_header: FullBoxHeader {
                                            version: 1,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        grouping_type: [
                                            114,
                                            101,
                                            102,
                                            115,
                                        ],
                                        default_length: Some(
                                            0,
                                        ),
                                        default_group_description_index: None,
                                        entry_count: 2,
                                        entries: [
                                            Unknown {
                                                grouping_type: [
                                                    114,
                                                    101,
                                                    102,
                                                    115,
                                                ],
                                                data: b"\0\0\0\0\x01\0\0\0\x01",
                                            },
                                            Unknown {
                                                grouping_type: [
                                                    114,
                                                    101,
                                                    102,
                                                    115,
                                                ],
                                                data: b"\0\0\0\x01\0",
                                            },
                                        ],
                                    },
                                ],
                                subs: [],
                                saiz: [],
                                saio: [],
                                csgp: [],
                            },
                        },
                        unknown_boxes: [],
                    },
                    unknown_boxes: [],
                    udta: None,
                },
            ],
            mvex: None,
            unknown_boxes: [],
            udta: None,
        },
    ),
    moof: [],
    mdat: [
        MediaDataBox {
            data.len: 51187,
        },
    ],
    imda: [],
    meta: None,
    styp: [],
    sidx: [],
    ssix: [],
    prft: [],
    unknown_boxes: [],
    mfra: None,
}
